results/classifier/zero-shot/118/review/1861551
architecture: 0.890
device: 0.878
register: 0.869
peripherals: 0.845
graphic: 0.834
semantic: 0.829
assembly: 0.813
hypervisor: 0.806
permissions: 0.800
debug: 0.798
performance: 0.794
user-level: 0.790
arm: 0.790
virtual: 0.786
KVM: 0.776
PID: 0.773
kernel: 0.763
TCG: 0.758
files: 0.741
socket: 0.740
VMM: 0.730
ppc: 0.724
vnc: 0.723
x86: 0.715
boot: 0.710
network: 0.705
mistranslation: 0.684
risc-v: 0.622
i386: 0.580
--------------------
hypervisor: 0.336
files: 0.195
TCG: 0.188
debug: 0.068
virtual: 0.062
kernel: 0.053
PID: 0.050
register: 0.044
semantic: 0.042
VMM: 0.039
x86: 0.025
device: 0.016
performance: 0.015
architecture: 0.008
user-level: 0.007
KVM: 0.006
network: 0.006
vnc: 0.006
peripherals: 0.004
boot: 0.004
risc-v: 0.004
permissions: 0.003
socket: 0.003
ppc: 0.003
i386: 0.003
arm: 0.003
assembly: 0.002
graphic: 0.001
mistranslation: 0.001

Errors while compiling source

OS type: Mac OS X 10.11.6
List of errors:
qemu-io-cmds.c:837:5: warning: implicit declaration of function 'clock_gettime' is invalid in C99 [-Wimplicit-function-declaration]
    clock_gettime(CLOCK_MONOTONIC, &t1);
    ^
qemu-io-cmds.c:837:19: error: use of undeclared identifier 'CLOCK_MONOTONIC'
    clock_gettime(CLOCK_MONOTONIC, &t1);
                  ^
qemu-io-cmds.c:843:19: error: use of undeclared identifier 'CLOCK_MONOTONIC'
    clock_gettime(CLOCK_MONOTONIC, &t2);
                  ^
qemu-io-cmds.c:970:19: error: use of undeclared identifier 'CLOCK_MONOTONIC'
    clock_gettime(CLOCK_MONOTONIC, &t1);
                  ^
qemu-io-cmds.c:972:19: error: use of undeclared identifier 'CLOCK_MONOTONIC'
    clock_gettime(CLOCK_MONOTONIC, &t2);
                  ^
qemu-io-cmds.c:1184:19: error: use of undeclared identifier 'CLOCK_MONOTONIC'
    clock_gettime(CLOCK_MONOTONIC, &t1);
                  ^
qemu-io-cmds.c:1194:19: error: use of undeclared identifier 'CLOCK_MONOTONIC'
    clock_gettime(CLOCK_MONOTONIC, &t2);
                  ^
qemu-io-cmds.c:1306:19: error: use of undeclared identifier 'CLOCK_MONOTONIC'
    clock_gettime(CLOCK_MONOTONIC, &t1);
                  ^
qemu-io-cmds.c:1308:19: error: use of undeclared identifier 'CLOCK_MONOTONIC'
    clock_gettime(CLOCK_MONOTONIC, &t2);
                  ^
qemu-io-cmds.c:1351:19: error: use of undeclared identifier 'CLOCK_MONOTONIC'
    clock_gettime(CLOCK_MONOTONIC, &t2);
                  ^
qemu-io-cmds.c:1383:19: error: use of undeclared identifier 'CLOCK_MONOTONIC'
    clock_gettime(CLOCK_MONOTONIC, &t2);
                  ^
qemu-io-cmds.c:1518:19: error: use of undeclared identifier 'CLOCK_MONOTONIC'
    clock_gettime(CLOCK_MONOTONIC, &ctx->t1);
                  ^
qemu-io-cmds.c:1663:23: error: use of undeclared identifier 'CLOCK_MONOTONIC'
        clock_gettime(CLOCK_MONOTONIC, &ctx->t1);
                      ^
qemu-io-cmds.c:1885:19: error: use of undeclared identifier 'CLOCK_MONOTONIC'
    clock_gettime(CLOCK_MONOTONIC, &t1);
                  ^
qemu-io-cmds.c:1887:19: error: use of undeclared identifier 'CLOCK_MONOTONIC'
    clock_gettime(CLOCK_MONOTONIC, &t2);
                  ^
1 warning and 14 errors generated.
make: *** [qemu-io-cmds.o] Error 1

Hi. The CLOCK_MONOTONIC facility was added in OSX 10.12; the version of OSX you're using is too old to build QEMU on, I'm afraid. QEMU's policy is to support the last two releases of OSX, so at the moment that's 10.14 and 10.15. Compiling on older versions might work, but it also might not, as you've discovered.


